Preparar despliegue en Render, Supabase y Vercel